2008-07-21  Dan Williams  <dcbw@redhat.com>

	* src/connection-editor/ce-page-ip4.glade
	  src/connection-editor/page-ip4.c
		- DHCP -> Automatic; so that it's appropriate to use with VPNs too

2008-07-21  Dan Williams  <dcbw@redhat.com>

	* src/gconf-helpers/gconf-upgrade.c
	  src/gconf-helpers/gconf-upgrade.h
	  src/gconf-helpers/gconf-helpers.c
		- (nm_gconf_migrate_0_7_netmask_to_prefix, nm_gconf_get_all_connections):
			convert netmasks to prefixes

2008-07-17  Tambet Ingo  <tambet@gmail.com>

	Fix connection editor's wireless security handling.

	* src/gconf-helpers/gconf-helpers.c (nm_gconf_connection_duplicate):
	Implement. Just using nm_connection_duplicate() does not add the applet
	specific object data.

	* src/connection-editor/nm-connection-list.c (do_edit): When duplicating the
	connection, use a helper function to get all the associated data as well.

	* src/connection-editor/nm-connection-editor.c (connection_editor_validate):
	Add some debug output for now to make it easier to see which page fails.

2008-07-11  Tambet Ingo  <tambet@gmail.com>

	* src/applet.glade: Add a placeholder for the info dialog's notebook to avoid
	a warning on startup.

2008-07-09  Dan Williams  <dcbw@redhat.com>

	* src/applet.c
		- (applet_get_default_active_connection): return a non-default connection
			if there is no default connection; fixes issue displaying the not-
			connected icon if a shared or autoip connection is active

2008-07-08  Dan Williams  <dcbw@redhat.com>

	* src/connection-editor/page-wireless.c
		- (populate_ui): ensure changes update the connection on-the-fly

2008-07-08  Dan Williams  <dcbw@redhat.com>

	* src/connection-editor/nm-connection-editor.c
	  src/connection-editor/nm-connection-editor.h
	  src/connection-editor/ce-page.c
	  src/connection-editor/ce-page.h
		- Move ce_spin_output_with_default() and ce_get_property_default() to
			ce-page.c

2008-07-08  Dan Williams  <dcbw@redhat.com>

	* src/applet.c
	  src/applet.h